re PR ipa/59610 (ICE in parm_preserved_before_stmt_p)

2014-01-08  Martin Jambor  <mjambor@suse.cz>

	PR ipa/59610
	* ipa-prop.c (ipa_compute_jump_functions): Bail out if not optimizing.
	(parm_preserved_before_stmt_p): Assume modification present when not
	optimizing.

testsuite/
	* gcc.dg/ipa/pr59610.c: New test.

From-SVN: r206428